(Bug 5286) Light Gray Text Too Dark on Foundation Pages
Changes $_dark-gray to $_mid-gray and defines $_dark-gray as #636363
(as it is on a background of #e6e6e6), then assigns this color to
$sub-nav-font-color and $pagination-link-font-color and
$pagination-unavailable-link-font-color using intermediate
variable $inactive-color.

--- a/htdocs/scss/skins/tropo/tropo-purple.scss
+++ b/htdocs/scss/skins/tropo/tropo-purple.scss
@@ -39,7 +39,8 @@ $_pink:             #f3d2fc;
 
 $_light-gray:       #f7f7f7;
 $_low-contrast-gray:#ddd;
-$_dark-gray:        #e9e9e9;
+$_mid-gray:         #e9e9e9;
+$_dark-gray:        #636363;
 $_off-black:        #111;
 $_white:            #fff;
 
@@ -50,10 +51,12 @@ $link-color:          $_purple;
 
 $primary-color:       $_purple;
 $primary-text-color:  $_white;      // color of text on a $primary-color background
-$secondary-color:     $_dark_gray;
+$secondary-color:     $_mid_gray;
 $strong-accent-color: $_dark-purple;
 $soft-accent-color:   $_pink;
 $border-color:        $_low-contrast-gray;
+
+$inactive-color:      $_dark-gray;
 
 $form-font-color:     $_off-black;
 $form-bg-color:       $_white;
@@ -105,9 +108,12 @@ $alert-function-factor: 20%;
 // panel
 $panel-bg:                              darken( $body-bg, 5% );
 
-// sub nav
-// $sub-nav-font-color: #999;
-// $sub-nav-active-color: #fff;
+// sub-nav
+$sub-nav-font-color:	$inactive-color;
+
+// pagination
+$pagination-link-font-color:	$inactive-color;
+$pagination-link-unavailable-font-color:	$inactive-color;
 
 // tables
 $table-bg:              $form-bg-color;
